# claudementor

./: .env.example  .gitignore  README.md  README_AFM.md  generate_mentoring_report.py  mentoring_prompt.md  preprocess_documents.py  pyproject.toml  render_report.py  run_mentoring_report.bat
src/: __init__.py  classify_files_llm.py  generate_mentoring_report_auto.py  logging_config.py  preprocess_documents.py  render_report.py  section_prompts.py  sharepoint_graph_client.py  video_processing.py
src/mentoring_report_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: mentoring_report_template.html
