[project]
name = "mentoring-report-generator"
version = "0.1.0"
description = "Simple tool to render mentoring reports from Claude JSON output"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = []
