[project]
name = "mentoring-report-generator"
version = "0.1.0"
description = "Simple tool to render mentoring reports from Claude JSON output"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pdfplumber>=0.11.8",
    "pypdf2>=3.0.0",
    "python-docx>=1.0.0",
    "msal>=1.33.0",
    "python-dotenv>=1.1.1",
    "colorlog>=6.9.0",
    "requests>=2.32.5",
    "openai>=1.0.0",
]

[project.scripts]
mentoring-report = "src.generate_mentoring_report_auto:main"

[tool.uv]
dev-dependencies = []
